--- a/laplace/relaxation-simple.html
+++ b/laplace/relaxation-simple.html
@@ -41,7 +41,7 @@
     <script src="/sim-shim-js/vendor/threejs/controls/OrbitControls.js"></script> -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/sim-shim-js/js/ace/src-min/ace.js"></script>
-    <script type="text/javascript" src="/sim-shim-js/.publish/sim-shim-bundle.js"></script>
+    <script type="text/javascript" src="/sim-shim-js/dist/sim-shim-bundle.js"></script>
     <script type="text/javascript">
 
     // init ace
