--- a/live/index.html
+++ b/live/index.html
@@ -105,7 +105,7 @@ ss.start();
     <script src="/sim-shim-js/vendor/mathjs/math.min.js"></script>
     -->
     <script type="text/javascript" src="/sim-shim-js/js/ace/src-min/ace.js"></script>
-    <script type="text/javascript" src="/sim-shim-js/.publish/sim-shim-bundle.js"></script>
+    <script type="text/javascript" src="/sim-shim-js/dist/sim-shim-bundle.js"></script>
     <script type="text/javascript">
         var editor = ace.edit("editor");
         editor.setTheme("ace/theme/monokai");
