--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,7 @@
 <body>
     <div id="plotlist"></div>
     <div id="plot"></div>
-    <script src="/sim-shim-js/.publish/sim-shim-bundle.js"></script>
+    <script src="/sim-shim-js/dist/sim-shim-bundle.js"></script>
     <script src="/sim-shim-js/test/test.js"></script>
 </body>
 </html>
