--- a/index.html
+++ b/index.html
@@ -2,27 +2,12 @@
 <head>
     <titlesim-shim-js Live Demo</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <style>
-    body {
-        background-color: #F0F0F0;
-        font-size: 40px;
-        text-align: center;
-    }
-    a {
-        text-decoration: none;
-        color: #59ABFA;
-    }
-    div {
-        padding: 50px;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div><a href="/sim-shim-js/live/">Interactive Live Demo</a></div>
-    <div><a href="/sim-shim-js/test/">Test Page With Examples</a></div>
-    <div><a href="/sim-shim-js/laplace/">Laplace Equation Example</a></div>
-    <!--
-    <div><a href="/sim-shim-js/gui/">Basic GUI Example</a></div>
-    -->
+    <div><a href="/sim-shim-js/live">Interactive Live Demo</a></div>
+    <div><a href="/sim-shim-js/test">Test Page With Examples</a></div>
+    <div><a href="/sim-shim-js/laplace">Laplace Equation Example</a></div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 </body>
 </html>
