--- a/laplace/index.html
+++ b/laplace/index.html
@@ -3,35 +3,15 @@
     <title>Laplace's Equation</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <style>
-    body {
-        background-color: #F0F0F0;
-        font-size: 25px;
-        text-align: center;
-        font-family: 'Open Sans', sans-serif;
-    }
-    a {
-        text-decoration: none;
-        color: #59ABFA;
-    }
-    .page {
-        padding: 30px;
-    }
-    #title {
-        padding: 30px;
-        font-size: 35px;
-        color: #333;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="title">Solving Laplace's Equation on a Square</div>
-    <div class="page"><a href="series-solution.html">Series Solution to the Laplace Equation</a></div>
-    <div class="page"><a href="series-plot.html">Series Solution Surface Plot</a></div>
     <!--
     <div class="page"><a href="relaxation-method.html">Relaxation Method for the Laplace Equation</a></div>
-    <div class="page"><a href="relaxation-smooth.html">Numerical Relaxation Method Surface Animation (Smoothed Using Interpolation)</a></div>
     -->
-    <div class="page"><a href="relaxation-simple.html">Numerical Relaxation Method Surface Animation</a></div>
+    <div class="page"><a href="series-solution">Series Solution to the Laplace Equation</a></div>
+    <div class="page"><a href="series-plot">Series Solution Surface Plot</a></div>
+    <div class="page"><a href="relaxation">Numerical Relaxation Method Surface Animation</a></div>
 </body>
 </html>
