--- a/test/index.html
+++ b/test/index.html
@@ -2,34 +2,12 @@
 <head>
     <title>ThreePlot Live Demo</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <style>
-    body {
-        background-color: #222;
-    }
-    #plot {
-        width: 80vw;
-        height: 100vh;
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-    #plotlist {
-        width: 20vw;
-        height: 100vh;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-    .listElem {
-        padding: 20px;
-        font-size: larger;
-        color: #90B1ED;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="plotlist"></div>
     <div id="plot"></div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="/sim-shim-js/js/sim-shim-bundle.js"></script>
     <script src="/sim-shim-js/test/test.js"></script>
 </body>
