--- a/laplace/series-solution/series-solution.html
+++ b/laplace/series-solution/series-solution.html
@@ -1,13 +1,7 @@
 <html>
 
 <head>
-    <style>
-        body {
-            text-align: center;
-            font-size: 20px;
-            background-color: #eee;
-        }
-    </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
