--- a/laplace/index.html
+++ b/laplace/index.html
@@ -12,6 +12,6 @@
     -->
     <div class="page"><a href="series-solution">Series Solution to the Laplace Equation</a></div>
     <div class="page"><a href="series-plot">Series Solution Surface Plot</a></div>
-    <div class="page"><a href="relaxation">Numerical Relaxation Method Surface Animation</a></div>
+    <div class="page"><a href="relaxation-plot">Numerical Relaxation Method Surface Animation</a></div>
 </body>
 </html>
