--- a/live/index.html
+++ b/live/index.html
@@ -33,7 +33,7 @@
     <button id="run-btn" onclick="run()">Run</button>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/sim-shim-js/js/ace/src-min/ace.js"></script>
-    <script type="text/javascript" src="/sim-shim-js/js/sim-shim-bundle.js"></script>
+    <script type="text/javascript" src="/sim-shim-js/js/sim-shim-bundle.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
