--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
     <div id="plotlist"></div>
     <div id="plot"></div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="/sim-shim-js/js/sim-shim-bundle.js"></script>
+    <script src="/sim-shim-js/js/sim-shim-bundle.min.js"></script>
     <script src="/sim-shim-js/test/test.js"></script>
 </body>
 </html>
