--- a/laplace/series-plot/index.html
+++ b/laplace/series-plot/index.html
@@ -12,7 +12,7 @@
     <button id="run-btn">Run Code</button>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/sim-shim-js/js/ace/src-min/ace.js"></script>
-    <script type="text/javascript" src="/sim-shim-js/js/sim-shim-bundle.js"></script>
+    <script type="text/javascript" src="/sim-shim-js/js/sim-shim-bundle.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 
