update lib, add session storage of code windows, add reset button to restore original editor text

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div><a href="/sim-shim-js/demo">Interactive Live Demo</a></div>
-    <div><a href="/sim-shim-js/surface">Surface Plot Boilerplate</a></div>
+    <div><a href="demo">Interactive Live Demo</a></div>
+    <div><a href="surface">Surface Plot Boilerplate</a></div>
     <!--
-    <div><a href="/sim-shim-js/test">Test Page With Examples</a></div>
+    <div><a href="test">Test Page With Examples</a></div>
     -->
-    <div><a href="/sim-shim-js/laplace">Laplace Equation Demo</a></div>
+    <div><a href="laplace">Laplace Equation Demo</a></div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 </body>
 </html>
