--- a/laplace/index.html
+++ b/laplace/index.html
@@ -10,8 +10,8 @@
     <!--
     <div class="page"><a href="relaxation-method.html">Relaxation Method for the Laplace Equation</a></div>
     -->
-    <div class="page"><a href="series-solution">Series Solution to the Laplace Equation</a></div>
-    <div class="page"><a href="series-plot">Series Solution Surface Plot</a></div>
-    <div class="page"><a href="relaxation-plot">Numerical Relaxation Method Surface Animation</a></div>
+    <div class="page"><a href="series-solution">Derivation of Series Solution to the Laplace Equation</a></div>
+    <div class="page"><a href="series-plot">Series Solution Plot</a></div>
+    <div class="page"><a href="relaxation-plot">Numerical Relaxation Method Animation</a></div>
 </body>
 </html>
