--- a/laplace/series-plot/index.html
+++ b/laplace/series-plot/index.html
@@ -3,16 +3,18 @@
 <head>
     <title>Series Solution to the Laplace Equation on a Sqaure</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../../styles/default-editor-plot.css">
 </head>
 
 <body>
     <div id="editor"></div>
     <div id="plot"></div>
-    <button id="run-btn">Run Code</button>
+    <button id="reset-text-btn">Reset Editor Text</button>
+    <button id="run-btn">Run</button>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="/sim-shim-js/js/ace/src-min/ace.js"></script>
-    <script type="text/javascript" src="/sim-shim-js/js/sim-shim-bundle.min.js"></script>
+    <script type="text/javascript" src="../../js/sim-shim-bundle.js"></script>
+    <script type="text/javascript" src="../../js/ace/src-min/ace.js"></script>
+    <script type="text/javascript" src="../../js/editor-manager.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 
