add fiddlable exmaples, update management scripts

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" type="text/css" href="assets/styles/index.css">
 </head>
 <body>
-    <div><a href="demo">Interactive Live Demo</a></div>
-    <div><a href="surface">Surface Plot Boilerplate</a></div>
+    <div><a href="fiddle">Fiddle</a></div>
+    <div><a href="examples">Examples</a></div>
+    <div><a href="fiddle-surface">Surface Plot Fiddle</a></div>
     <!--
     <div><a href="test">Test Page With Examples</a></div>
     -->
