big refactor of helpers, update sim-shim lib, add big examples page

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,10 +18,10 @@
     </div>
     <div id="plot"></div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../assets/js/sim-shim-bundle.js"></script>
-    <script type="text/javascript" src="../assets/js/ace/src-min/ace.js"></script>
-    <script type="text/javascript" src="../assets/js/editor-manager.js"></script>
-    <script type="text/javascript" src="../assets/js/plot-manager.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="../assets/js/sim-shim-bundle.js?t=1471579641"></script>
+    <script type="text/javascript" src="../assets/js/ace/src-min/ace.js?t=1471579641"></script>
+    <script type="text/javascript" src="../assets/js/editor-manager.js?t=1471579641"></script>
+    <script type="text/javascript" src="../assets/js/plot-manager.js?t=1471579641"></script>
+    <script type="text/javascript" src="index.js?t=1471579641"></script>
   </body>
 </html>
