--- a/fiddle/index.html
+++ b/fiddle/index.html
@@ -1,18 +1,22 @@
 <html>
 <head>
-    <title>Live Demo</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../assets/styles/default-editor-plot.css">
+  <title>Fiddle</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../assets/styles/default-editor-plot.css">
 </head>
 <body>
-    <div id="editor"></div>
-    <div id="plot"></div>
-    <button id="reset-text-btn">Reset Editor Text</button>
-    <button id="run-btn">Run</button>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../assets/js/sim-shim-bundle.js"></script>
-    <script type="text/javascript" src="../assets/js/ace/src-min/ace.js"></script>
-    <script type="text/javascript" src="../assets/js/editor-manager.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+  <div id="editor"></div>
+  <div id="plot"></div>
+  <div id="buttons">
+    <button class="btn" id="reset-text-btn">Reset Editor Text</button>
+    <button class="btn" id="run-btn">Run</button>
+  </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="../assets/js/sim-shim-bundle.js?t=1471579641"></script>
+  <script type="text/javascript" src="../assets/js/ace/src-min/ace.js?t=1471579641"></script>
+  <script type="text/javascript" src="../assets/js/editor-manager.js?t=1471579641"></script>
+  <script type="text/javascript" src="../assets/js/plot-manager.js?t=1471579641"></script>
+  <script type="text/javascript" src="../assets/js/default-editor-plot-init.js?t=1471579641"></script>
+  <script type="text/javascript" src="main.js?t=1471579641"></script>
 </body>
 </html>
