--- a/esdoc/identifiers.html
+++ b/esdoc/identifiers.html
@@ -95,8 +95,8 @@
       <div>
         
         
-        <div data-ice="description"><p>Responsible for parsing input manifests into ThreeJS objects and
-creating update functions.</p>
+        <div data-ice="description"><p>Responsible for creating ThreeJS Objects and setting up update functions
+for plots.</p>
 </div>
       </div>
     </td>
